<resources>
    <string name="app_name">지켜주길</string>

    <string name="action_home">홈</string>
    <string name="action_call">전화 받기</string>
    <string name="action_tutorial">사용법</string>
    <string name="sos_history">※※※※※</string>
    <string name="settings">설정</string>
    <string name="button_calling">전화</string>
    <string name="button_siren">사이렌</string>
    <string name="record">녹음</string>
    <string name="siren">사이렌</string>
    <string name="bluetooth">블루투스</string>
    <string name="speaker">스피커</string>
    <string name="sos_stop">도움요청</string>
    <string name="keypad">키패드</string>

</resources>