<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        tools:icon="@drawable/mr_button_light" />
    <item
        android:id="@+id/action_call"
        android:title="@string/action_call"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        tools:icon="@drawable/mr_button_light" />

    <item
        android:id="@+id/action_tutorial"
        android:title="@string/action_tutorial"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        tools:icon="@drawable/mr_button_light" />
</menu>