<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_call_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="25dp"
                android:padding="10dp"
                android:text="00:00"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_call_timer"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="25dp"
                android:text="아빠"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_contact_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="151dp"
                android:text="010-1234-5678"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/button_calling"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_below="@+id/text_contact_number"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="fill"
                android:layout_marginStart="149dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="144dp"
                android:layout_marginBottom="214dp"
                android:scaleType="center"
                android:src="@drawable/baseline_call_24"
                android:text="전화걸기/끊기" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:columnCount="3"
            android:rowCount="2"
            android:padding="16dp"
            android:layout_marginBottom="280dp">

            <ImageButton
                android:id="@+id/button_record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:contentDescription="@string/record"
                android:src="@drawable/baseline_bluetooth_24" />

            <ImageButton
                android:id="@+id/button_siren"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:src="@drawable/baseline_bluetooth_24"
                android:contentDescription="@string/siren"/>

            <ImageButton
                android:id="@+id/button_bluetooth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:src="@drawable/baseline_bluetooth_24"
                android:contentDescription="@string/bluetooth"/>

            <ImageButton
                android:id="@+id/button_speaker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:src="@drawable/baseline_bluetooth_24"
                android:contentDescription="@string/speaker"/>

            <ImageButton
                android:id="@+id/button_sos_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:src="@drawable/baseline_bluetooth_24"
                android:contentDescription="@string/sos_stop"/>

            <ImageButton
                android:id="@+id/button_keypad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:src="@drawable/baseline_bluetooth_24"
                android:contentDescription="@string/keypad"/>

        </GridLayout>
    </FrameLayout>
</RelativeLayout>
